--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "version:patch": "npm run-script build && npm version patch && git push && git push --tags",
-    "test": "mocha test",
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "test-mocha": "mocha test",
     "build": "uglifyjs src/fataly.js -o dist/fataly.min.js -c -m && uglifyjs src/fataly.js -o dist/fataly.js -b && npm run-script commit",
     "commit": "git commit -a -m \"build\""
   },
@@ -21,7 +22,10 @@
   "author": "Fabio Ricali",
   "license": "MIT",
   "devDependencies": {
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "uglify-js": "^3.0.23"
   },
   "repository": {
